fixing issue with buttons on Safari Mobile

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -44,9 +44,8 @@
 	}
 }
 
-button {
+button .navbutton {
 	-webkit-border-radius: 0px !important;
-	border-radius: 0px !important;
 }
 
 #map_canvas {
